--- a/demo/index.html
+++ b/demo/index.html
@@ -9,5 +9,7 @@
 <body>
     <p>test !!!</p>
     <include src="components/include.html"></include>
+    <include src="components/include2.html">
+        <include src="components/include.html" >  </include>
 </body>
 </html>
